Restyled by clang-format